--- a/sigma.tex
+++ b/sigma.tex
@@ -113,6 +113,8 @@ Is it possible to give an example of a complex-oriented theory which receives an
 
 \section{Elliptic curves and $\theta$--functions}
 
+\todo{The goal of this lecture should be to set up all the algebraic geometry we'll need, in a coherent-enough way that the students will be able to think back and at least mumble ``yeah, ok, reasonable''.}
+
 Today will constitute something of a r\'esum\'e on elliptic curves.  We'll hardly prove anything, and we also won't cover many topics that a sane introduction to elliptic curves would make a point to cover.  Instead, we'll try to restrict attention to those concepts which will be of immediate use to us in the coming couple of lectures.
 
 To begin with, recall that an elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice $\Lambda$ of full rank in $\C$ and forming the quotient \[\C \xrightarrow{\pi_\Lambda} E_\Lambda = \C / \Lambda.\]  The meromorphic functions $f$ on $E_\Lambda$ pull back to give meromorphic functions $\pi_\Lambda^* f$ on $\C$ satisfying a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  From this, it follows that there are no holomorphic such functions, save the constants --- such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order $2$ at the lattice points: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on $E_\Lambda$, in the sense that the subsheaf spanned by the algebra generators $\wp_\Lambda$ and $\wp_\Lambda'$ is exactly $\pi_\Lambda^* \sheaf M_{E_\Lambda}$.  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - g_2(\Lambda) \wp_\Lambda(z) - g_3(\Lambda),\] for some special values $g_2(\Lambda)$ and $g_3(\Lambda)$.  Accordingly, writing $C \subseteq \CP^2$ for the projective curve $wy^2 = 4x^3 - g_2(\Lambda) w^2 x - g_3(\Lambda) w^3$, there is an analytic group isomorphism
@@ -166,98 +168,38 @@ upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
 This embedding of $E_\Lambda$ as an intersection of quadratic hypersurfaces in $\CP^3$ is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{d^2}{dz^2} \log \theta_{\exp{2 \pi i \tau}}(\exp{2 \pi i z}) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function $\sigma_\Lambda$, defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is $\wp$ and so is ``basically $\theta_q^{1/2,1/2}$''.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-The $\theta$--functions version of the story has two main successes.  One is that there is a version of this story for an arbitrary abelian variety\citeme{Milne's abelian varieties, Theorem 7.1}.  It turns out that all abelian varieties are projective, and the theorems sitting at the heart of this claim are
+The $\theta$--functions version of the story has two main successes.  One is that there is a version of this story for an arbitrary abelian variety.  It turns out that all abelian varieties are projective\citeme{Milne's abelian varieties, Theorem 7.1}, and the theorem sitting at the heart of this claim is
 \begin{corollary}[Theorem of the cube]\label{Theta3IsTrivial}\citeme{Milne's Abelian Varieties chapter, Corollary 6.4 and Theorem 7.1}
-Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid, then $\Theta^3(\L)$ is canonically trivialized. \qed
+Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid, then $\Theta^3(\L)$ is canonically trivialized. \qed
 \end{corollary}
-\noindent However, the proof of projectivity arising from this method rests on choosing an ample line bundle on $A$ and using some generating global sections to embed into $\P(\L^{\oplus n})$.  A choice of ``$\theta$--structure'' on $A$, which is only slightly more data, gives a canonical identification of $\P(\L^{\oplus n})$ with a \emph{fixed} projective space.
-
-
-
-\textbf{Be sure to mention Weil pairings today, as well as $\Theta^3$--structures.}
-
-
-
-The other success of the $\theta$--functions story is that it gives access to a small piece of the compactified moduli of elliptic curves, $\overline{\moduli{ell}}$, called the Tate curve.
+\noindent However, the proof of projectivity arising from this method rests on choosing an ample line bundle on $A$ and using some generating global sections to embed into $\P(\L^{\oplus n})$.  Mumford showed that a choice of ``$\theta$--structure'' on $A$, which is only slightly more data given in terms of Heisenberg representations\todo{I think.}, gives a canonical identification of $\P(\L^{\oplus n})$ with a \emph{fixed} projective space.  Separately, Breen\citeme{Breen} showed that if $\L$ is a line bundle on $A$ with a chosen trivialization of $\Theta^3 \L$ and $\pi\co A' \to A$ is an epimorphism that trivializes $\L$, then one can also associate to this a theory of $\theta$--functions.
 
 
 
 
+An important piece of both of these stories is the $e_n$--pairing associated to such a bundle.
 
 
--------
 
-Every abelian variety is projective.  Remark that this rests on the Theorems of the Cube and of the Square.  In fact, every abelian variety has a theory of $\theta$--functions, which give a particularly nice embedding, associated to a $\Theta^3$--structure on a totally symmetric ample line bundle.  (Say what the Weil pairing is good for: detecting nontrivial $\Theta^3$--structures, at least.)
+\citeme{This part of the story is cribbed from AHS Section 2.6}
+The other success of the $\theta$--functions story is that it gives access to a small piece of the compactified moduli of elliptic curves, $\overline{\moduli{ell}}$, called the Tate curve.  In this parametrized setting, define $D'$ to be the punctured complex disk, and set \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of $C'$ over a particular point $q \in D'$ is the curve $\C^\times / q^{\Z}$ considered above, and $\theta$ determines a holomorphic function on the total space $\C^\times \times D'$.  The Weierstrass embeddings discussed above give an embedding of $C'_{\mathrm{an}}$ into $D' \times \CP^2$ described by \[y^2 + xy = x^3 - 5 \alpha_3 x + -\frac{5 \alpha_3 + 7 \alpha_5}{12}\] for certain functions $\alpha_3$ and $\alpha_5$ of $q$.  At $q = 0$, these curve collapses to the twisted cubic \[y^2 + xy = x^3,\] and over the whole open unit disc $D$ we call this extended family $C_{\mathrm{an}}$.
 
-Analyze the integral Tate curve.
-
+Now let $A \subseteq \Z\ps{q}$ by the subring of power series which converge absolutely on the open unit disk; then the coefficients of the Weierstrass cubic lie in $A$, so it determines a generalized elliptic curve $C$ over $\Spec A$, and $C_{an}$ is the curve given by base-change from $A$ to the ring of holomorphic functions on $D$.  The Tate curve $C_{\Tate}$ is defined to be the generalized elliptic curve over the intermediate object $D_{\Tate} = \Spec \Z\ps{q}$ as base-changed from $A$.
 
 
 
 
 -------
 
-This is just a list of theorems and ideas, not a coherent lecture.  I guess the point of this lecture is that this material is somewhat ``standard training'' for an algebraic geometer (or, perhaps, any algebraically-inclined graduate student), and so it's not strange for these constructions to be in the front of someone's mind.  This will matter when we start to analyze $kU^{2n}(\CP^\infty)^{\times n}$ and come across familiar constructions all over again.  So, the goal should be to introduce the players in this story in its own context, but to put emphasis on the ``shapes'' of things.
 
-\begin{remark}\citeme{Remarks 6.8-9 of Milne's Abelian Varities chapter}
-Fixing $\L$, the assignment \[a \in A(k) \mapsto t_a^* \L \otimes \L^{-1} \in \Pic(A)\] is a homomorphism.  To see this, tensor both sides of \Cref{TheoremOfTheSquare} with $\L^{-2}$.  If we write $D \simeq D'$ for linear equivalence of divisors (i.e., for $\L(D) \cong \L(D')$), then we have \[t_{a+b} D + D = t_a D + t_b D\] and hence for $\sum_{i=1}^n{}^A a_i = 0$ it follows that \[\sum_{i=1}^n t_{a_i} D = nD.\]
-\end{remark}
-
-\begin{theorem}\citeme{Strip out the easy parts of Milne's Theorem 7.1}
-Every elliptic curve is projective.
-\end{theorem}
-\begin{proof}
-First, assume that the ground field $k$ is algebraically closed.  We aim to construct a very ample linear system, meaning that it separates points (for every pair $a, b$ of distinct closed points on the variety, there is a $D$ in the system with $a \in D$ but $b \not\in D$) and it separates tangent vectors (for every closed point $a$ and tangent vector $t$ at $a$, there is a $D$ in the system with $a \in D$ but $t \not\in T_a D$).  Consider just the condition that a linear system separates the origin point from all other closed points in $A$; the case of a curve is too low-dimensional for this is to be interesting, as we can pick our linear system to consist of only the point divisor $D = \{0\}$.  If $a$ and $b$ are any two points in $A(k)$, then one can always find a third point $c$ so that $D_a + D_c + D_{-c-a}$ misses $b$ --- that is, the duplicated and translated system of divisors separates $a$ from $b$.  The theorem of the cube shows that $D_a + D_c + D_{-c-a} = 3D$, regardless of $a$ and $c$, so we take $3D$ as the basic unit of our system of divisors.  Finally, looking around II.7.8.2 of Hartshorne\todo{Expand this out.} shows that this gives rise to the appropriate projective embedding.
-
-Finally, one can show that the projectivity of $A_{\bar k}$ entails the projectivity of $A_k$.\todo{Expand me?}
-\end{proof}
-
-\begin{remark}
-Let $D = 3\{0\}$ and choose a suitable basis $\{1, x, y\}$ of $H^0(A; \L(3D))$. Then the map $A \to \P^2$ defined by the basis identifies $A$ with the cubic projective curve \[Y^2 Z + a_1 XYZ + a_3 YZ^2 = X^3 + a_2 X^2 Z + a^4 X Z^2 + a_6 Z^3.\] \todo[inline]{Actually, I think that the Weierstrass p function gives this presentation? The $\theta$--function presentation writes an elliptic curve as the intersection of two quadraics in $\P^3$ rather than in $\P^2$.}
-\end{remark}
-
-Every abelian variety is projective (Theorem 7.1 of Milne's \textit{Abelian varieties (short)})
-
-Elliptic $\theta$--functions: every elliptic curve embeds into the \emph{same} projective space
-
-$\Theta$--structures and $\theta$--functions for general abelian varieties: continuously embedding the universal continuous family of abelian varieties into a single projective space.
-
-Corollary 7.2 of Milne's chapter is that every abelian variety has a \emph{symmetric} ample invertible sheaf.  (Remarks after that say that any ample sheaf becomes very ample after cubing it. That's really what the theorem of the cube's use in the above proof is saying.)
-
-Entire elliptic functions are constant.  The $\theta$--function is a quasiperiodic function (so, section of a nontrivial line bundle) with a unique simple zero and no poles (so, suitable for building functions with more complicated divisor sets).  The field of elliptic functions (so, allowing poles) is generated by Weierstrass p and its derivative.
-
-
-Section--preserving maps of abelian schemes are automatically homomorphisms: Olsson's Prop 1.11.
-
-The theorem of the cube: $\Theta^3 \L$ is canonically trivial for any rigidified line bundle $\L$ on an abelian scheme $A$.  You can find this in Olsson Thm 2.2.  Or, Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
-
-$\Theta$--structures and symmetric biextensions
-
-------
-
-Take $S = \Spec \bar k$, let $E/S$ be an elliptic curve, and let $\L = \sheaf O_E(ne)$ for an integer $n \ge 1$.  Then for a point $a \in E(\bar k)$ \[t_a^* \L \otimes \L^{-1} \simeq \sheaf O_E(n(-a) -n(e))\] which is trivial if and only if $na = e$, hence $K_{(E, \L)} \cong E[n]$.  The $\Theta$--group $\sheaf G_{(E, \L)}$ consists of the set of points $(a, f)$ where $a \in E[n]$ and $f \in \bar k(E)$ is a function with $\div(f) = n(-a) - n(e)$.  There is a natural antisymmetric pairing, called the Weil pairing, coming from the central extension \[1 \to \Gm \to \sheaf G_{(E, \L)} \to E[n] \to 1.\]
-
-(See Olsson 3.5, 3.11.  You can also see Mumford's \textit{Abelian varieties} p.\ 222.)
-
--------
 
 Here's what AHS has to say about things (in Section 2.6):
 
-Start by thinking complex-analytically, so that $D'$ is the punctured unit-radius complex disk and $C'_{an}$ is the Tate curve over it: \[C'_{an} = \C^\times \times D' / (u, q) \sim (qu, q).\]  Meromorphic functions on $C'_{an}$ are meromorphic functions $f$ on $C^\times \times D'$ satisfying $f(u, q) = f(qu, q)$.  The pullback of the ideal sheaf $\sheaf I'(0)$ of functions vanishing at the origin on $C'_{an}$ to $\C^\times \times D'$ is the line bundle whose holomorphic sections are functions vanishing at the points $(q^{\Z}, q)$.  We can naively define such a function with simple zeroes on this locus: \[\tilde \theta(u, q) = \prod_{n \in \Z}(1 - q^n u).\]  This gives a trivialization of the pulled-back line bundle, but it doesn't descend to $C'_{an}$, since it doesn't satisfy the right functional equation --- instead, it satisfies \[\tilde \theta(qu, q) = -u^{-1} \tilde\theta(u, q).\]  However, they claim it's easy to check that $\delta^3 \tilde\theta(u, q)$ does descend to a rigid trivialization of $\Theta^3(\sheaf I(0))$, so gives the unique cubical structure on $C'_{an}$.
+However, they claim it's easy to check that $\delta^3 \tilde\theta(u, q)$ does descend to a rigid trivialization of $\Theta^3(\sheaf I(0))$, so gives the unique cubical structure on $C'_{an}$.
 
-Next, we can provide an actual equation for the Tate curve, which will show us how to compactify it at the puncture point.  Make the definitions
-\begin{align*}
-\sigma_k(n) & = \sum_{d \mid n} d^k, &
-\alpha_k & = \sum_{n > 0} \sigma_k(n) q^n,
-\end{align*}
-so that the Weierstrass cubic \[y^2 + xy = x^3 + -5\alpha_3 x + -\frac{5\alpha_3 + 7\alpha_5}{12}\] presents a projective plane curve.  This transforms isomorphically to the Tate curve by the coordinates
-\begin{align*}
-x & = \frac{u}{(1 - u)^2} + \sum_{n > 0} q^n \sum_{d \mid n} d(u^d - 2 + u^{-d}), \\
-y & = \frac{u^2}{(1 - u)^3} + \sum_{n > 0} q^n \sum_{d \mid n} \frac{d}{2} ((d - 1) u^d + 2 - (d+1)u^{-d}).
-\end{align*}
-The Weierstrass version of the equation makes sense at $q = 0$ (although it becomes singular), so we get a family $C_{an}$ of generalized elliptic curves over the open unit disk $D$.  (The fiber over $q = 0$ is the twisted cubic $y^2 + xy = x^3$.)  The invariant differential is $dx / (2y + x) = du / u$, and the cubical structure is given by the unique extension of $\delta^3 \tilde\theta(u, q)$.
+The invariant differential is $dx / (2y + x) = du / u$, and the cubical structure is given by the unique extension of $\delta^3 \tilde\theta(u, q)$.
 
-Now let $A \subseteq \Z\ps{q}$ by the subring of power series which converge absolutely on the open unit disk; then the coefficients of the Weierstrass cubic lie in $A$, so it determines a generalized elliptic curve $C$ over $\Spec A$, and $C_{an}$ is the curve given by base-change from $A$ to the ring of holomorphic functions on $D$.  The Tate curve $C_{\Tate} $is defined to be the generalized elliptic curve over the intermediate object $D_{\Tate} = \Spec \Z\ps{q}$ as base-changed from $A$.  Since meromorphic sections of $\Theta^3 \sheaf I(0)$ on $C^3$ inject into such over $C_{an}^3$, the (transcendental) equation $s(C_{an}^3) = \delta^3 \tilde\theta(u, q)$ nonetheless determines the cubical structure on $\sheaf I(0)$ over $C$ and hence over $C_{\Tate}$ as well.
+Since meromorphic sections of $\Theta^3 \sheaf I(0)$ on $C^3$ inject into such over $C_{an}^3$, the (transcendental) equation $s(C_{an}^3) = \delta^3 \tilde\theta(u, q)$ nonetheless determines the cubical structure on $\sheaf I(0)$ over $C$ and hence over $C_{\Tate}$ as well.
 
 Finally, we turn to the associated formal groups.  First, the quotient map \[\C^\times \times D' = \Gm \times D' \to C_{an}'\] is a local analytic isomorphism, so it restricts to an isomorphism \[\G_m \times D' \to \widehat C_{an}'\] and extends across the origin to an isomorphism \[\G_m \times D \to \widehat C_{an}.\]  Additionally, even though $\tilde\theta$ does not descend to $C_{an}$, it does descend to $\widehat C_{an}$ --- and there it gives a coordinate.  Hence, $s(\widehat C_{an}) = \delta^3 \tilde\theta(u, q)$, where $\tilde\theta$ is treated directly as a coordinate on $\widehat C_{an}$.
 
@@ -273,6 +215,34 @@ Of these, only $t$ gives an algebraic coordinate on $C_{an}'$ (and in fact on $C
 1 - u(t) & = t + O(t^2).
 \end{align*}
 The coefficients of the powers of $t$ in these series are holomorphic functions on the punctured disk $D'$.  In fact, they extend to $D$ and have integer coefficients (which you see by working over the completion of $\Z[u^pm]\ps{q}$ at $(1 - u)$).  Thus $\tilde\theta(t)$ and $u(t)$ actually lie in $A\ps{t}$, so give functions on $\widehat C$ and $\widehat C_{\Tate}$.  It's supposed to follow, finally, that $s(\widehat C/A) \in C^3(\widehat C; \sheaf I(0))$ is $\delta^3 \tilde\theta(t)$, using all the definitions above.
+
+
+
+
+
+
+-------
+
+\begin{theorem}\citeme{Strip out the easy parts of Milne's Theorem 7.1}
+Every elliptic curve is projective.
+\end{theorem}
+\begin{proof}
+First, assume that the ground field $k$ is algebraically closed.  We aim to construct a very ample linear system, meaning that it separates points (for every pair $a, b$ of distinct closed points on the variety, there is a $D$ in the system with $a \in D$ but $b \not\in D$) and it separates tangent vectors (for every closed point $a$ and tangent vector $t$ at $a$, there is a $D$ in the system with $a \in D$ but $t \not\in T_a D$).  Consider just the condition that a linear system separates the origin point from all other closed points in $A$; the case of a curve is too low-dimensional for this is to be interesting, as we can pick our linear system to consist of only the point divisor $D = \{0\}$.  If $a$ and $b$ are any two points in $A(k)$, then one can always find a third point $c$ so that $D_a + D_c + D_{-c-a}$ misses $b$ --- that is, the duplicated and translated system of divisors separates $a$ from $b$.  The theorem of the cube shows that $D_a + D_c + D_{-c-a} = 3D$, regardless of $a$ and $c$, so we take $3D$ as the basic unit of our system of divisors.  Finally, looking around II.7.8.2 of Hartshorne\todo{Expand this out.} shows that this gives rise to the appropriate projective embedding.
+
+Finally, one can show that the projectivity of $A_{\bar k}$ entails the projectivity of $A_k$.\todo{Expand me?}
+\end{proof}
+
+Corollary 7.2 of Milne's chapter is that every abelian variety has a \emph{symmetric} ample invertible sheaf.  (Remarks after that say that any ample sheaf becomes very ample after cubing it. That's really what the theorem of the cube's use in the above proof is saying.)
+
+
+The theorem of the cube: $\Theta^3 \L$ is canonically trivial for any rigidified line bundle $\L$ on an abelian scheme $A$.  You can find this in Olsson Thm 2.2.  Or, Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
+
+------
+
+Take $S = \Spec \bar k$, let $E/S$ be an elliptic curve, and let $\L = \sheaf O_E(ne)$ for an integer $n \ge 1$.  Then for a point $a \in E(\bar k)$ \[t_a^* \L \otimes \L^{-1} \simeq \sheaf O_E(n(-a) -n(e))\] which is trivial if and only if $na = e$, hence $K_{(E, \L)} \cong E[n]$.  The $\Theta$--group $\sheaf G_{(E, \L)}$ consists of the set of points $(a, f)$ where $a \in E[n]$ and $f \in \bar k(E)$ is a function with $\div(f) = n(-a) - n(e)$.  There is a natural antisymmetric pairing, called the Weil pairing, coming from the central extension \[1 \to \Gm \to \sheaf G_{(E, \L)} \to E[n] \to 1.\]
+
+(See Olsson 3.5, 3.11.  You can also see Mumford's \textit{Abelian varieties} p.\ 222.)
+
 
 
 
