--- a/cooperations.tex
+++ b/cooperations.tex
@@ -457,7 +457,7 @@ where $\delta$ is induced by $\delta [\omega] = (\mu^* - \pi_1^* - \pi_2^*)[\ome
 The flatness condition in the Example is important to getting the calculation to work out right, and of course it is not satisfied when working over a perfect field of positive characteristic $p$ --- our favorite setting in \Cref{MfgI:Height} and \Cref{ChapterFiniteSpectra} more generally.  However, de Rham cohomology has the following remarkable lifting property (which we have specialized to $H^1_{dR}$):
 
 \begin{theorem}
-Let $A$ be a $\Z_{(p)}$--flat ring, let $f_1(x), f_2(x) \in A\ps{x}$ be power series without constant term.  If $f_1 \equiv f_2 \pmod{pA}$, then for any differential $\omega \in A\ps{x} dx$ the difference $f_1^*(\omega) - f_2^*(\omega)$ is exact.
+Let $A$ be a $\Z_{(p)}$--flat ring, let $f_1(x), f_2(x) \in A\ps{x}$ be power series without constant term.  If $f_1 \equiv f_2 \pmod{p}$, then for any differential $\omega \in A\ps{x} dx$ the difference $f_1^*(\omega) - f_2^*(\omega)$ is exact.
 \end{theorem}
 \begin{proof}
 Write $\omega = dg$ for $g \in K\ps{x}$, and write $f_2 = f_1 + p\Delta$.  Then
@@ -481,16 +481,16 @@ Let $k$ be a perfect field of characteristic $p > 0$, and let $\G_0$ be a formal
 \end{definition}
 
 \begin{remark}
-This is independent of choice of lift up to coherent isomorphism.  Given any other lift $\G'$ of $\G_0$ to $\W_p(k)$, we can find \emph{some} power series --- not necessarily a group homomorphism --- covering the identity on $\G_0$.  \Cref{H1dRIsCrystalline} then shows that this map induces an isomorphism between the two potential definitions of $M(\G_0)$.
+This is independent of choice of lift up to coherent isomorphism.  Given any other lift $\G'$ of $\G_0$ to $\W_p(k)$, we can find \emph{some} power series --- not necessarily a group homomorphism --- covering the identity on $\G_0$.  \Cref{H1dRIsCrystalline} then shows that this map induces a canonical isomorphism between the two potential definitions of $M(\G_0)$.
 \end{remark}
 
-Finally, note that the module $M(\G_0)$ carries some natural operations:
+Note that the module $M(\G_0)$ carries some natural operations:
 \begin{itemize}
 \item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module, with the action by $\ell$ corresponding to multiplication--by--$\ell$ on $\G_0$.
-\item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so by \Cref{H1dRIsCrystalline} induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$.  That is, $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
+\item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so it induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$.  That is, $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
 \item Verschiebung: The Verschiebung map is given by the mysterious formula \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\] It satisfies anti-semilinearity, $aV(v) = V(a^\phi v)$, and also $FV = p$.
 \end{itemize}
-With this, we come to the main theorem of this section:
+With this, we come to the main theorem of this Lecture:
 
 \begin{theorem}
 The functor $M$ determines a contravariant equivalence of categories between smooth $1$--dimensional formal groups over $k$ of finite $p$--height and finite free $\W_p(k)$--modules equipped with appropriate operations $F$ and $V$, called \textit{Dieudonn\'e modules}. \qed \todo{Add in words about being uniform and reduced?}
@@ -519,7 +519,7 @@ Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, a
 We can also use Dieudonn\'e theory to compute the automorphism group of a fixed Honda formal group, which is information we wanted back in \Cref{ChromaticLocalizationSection}:
 
 \begin{corollary}\label{FormOfStabilizerGroup}
-For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we compute \[\Aut \Gamma_d \cong \left. \W_p(k) \<F\> \middle/ \left( \begin{array}{c} Fw = w^\phi F, \\ F^d = p \end{array} \right) \right.^\times.\]
+For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we compute \[\Aut \Gamma_d \cong \left. \W_p(\F_{p^d}) \<F\> \middle/ \left( \begin{array}{c} Fw = w^\phi F, \\ F^d = p \end{array} \right) \right.^\times.\]
 \end{corollary}
 \begin{proof}
 The Dieudonn\'e module associated to $\Gamma_d$ satisfies $F^d = p$, and hence $M(\Gamma_d/k)$ is presented as a \emph{quotient} of the ring of operators on Dieudonn\'e modules.  The endomorphism ring of such a module is canonically isomorphic to the module itself.
