--- a/preface.tex
+++ b/preface.tex
@@ -26,7 +26,7 @@ Berkeley students: Hood Chatham and Geoffrey Lee, Catherine Ray
 
 Contributors: Eva Belmont, Hood Chatham (spectral sequence package), Jun Hou Fung, Jeremy Hahn (Yuli Rudyak's alternative proof), Mauro Porta, Krishanu Sankar, Danny Shi, Allen Yuan
 
-Regular participants (whoever I could think of on March 24, again missing people): Eva Belmont, Lukas Brantner, Christian Carrick, Hood Chatham, Jun Hou Fung, Meng Guo, Jeremy Hahn, Erick Knight, Jake Marcinek, Krishanu Sankar, Jay Shah, Danny Shi, Allen Yuan
+Regular participants (whoever I could think of on March 24, again missing people): Eva Belmont, Lukas Brantner, Christian Carrick, Hood Chatham, Jun Hou Fung, Meng Guo, Jeremy Hahn, Erick Knight, Jake Marcinek, Akhil Mathews, Krishanu Sankar, Jay Shah, Danny Shi, Allen Yuan
 
 Course registrants (collected March 24, possibly missing some MIT people): Colin Aitken, Adam Al-Natsheh, Eva Belmont, Jason Bland, Dorin Boger, Lukas Brantner, Christian Carrick, Hood Chatham, David Corwin, Jun Hou Fung, Meng Guo, Jeremy Hahn, Changho Han, Chi-Yun Hsu, Erick Knight, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, Jack McNamara, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, Kishanu Sankar, Jay Shah, Ananth Shankar, Danny Shi, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, Allen Yuan, Adrian Zahariuc, Yifei Zhao, Rong Zhou, Yihang Zhu.
 
